k8s/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: 2048-game-svc
  labels:
    app: 2048-game
spec:
  type: LoadBalancer
  selector:
    app: 2048-game
  ports:  
    - protocol: TCP
      port: 80
      targetPort: 80
